/*
 * $Id: ChangeLog,v 1.5468 2007/04/29 18:07:24 andresreyesh Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-04-29 21:15 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/hbpcode.h
  * include/hbvm.h
  * include/hbvmpub.h
  * include/hbxvm.h
  * source/compiler/genc.c
  * source/compiler/gencc.c
  * source/compiler/harbour.sly
  * source/compiler/hbdead.c
  * source/compiler/hbfix.c
  * source/compiler/hblbl.c
  * source/compiler/hbpcode.c
  * source/compiler/hbpcstat.c
  * source/compiler/hbstripl.c
  * source/vm/hvm.c
  * include/hbexprb.c
  * include/hbexprc.c
  * source/compiler/exproptb.c
  * source/compiler/exproptc.c
    * Standardized and improved HB_P_[SET]LOCANEAR* support
    + Added HB_P_[PUSH]LOCALNEARINC and HB_P_[PUSH]LOCALNEARDEC to poptimize <local> += 1 and <local> -= 1

  * source/vm/maindllp.c
    * Updated hb_vmProcessSymbols() as per recent change

2007-04-29 12:06 UTC-0700 Andres Reyes <andresreyes_mzt/at/yahoo.com.mx>
  * include/hbclass.ch
    * Several Changues
      - Removed __CLS_PARAM, __CLS_PAR00, __HB_CLS_PAR
      - Removed .. Not loger nedded
	#xcommand _HB_MEMBER <MethodName>([<params,...>])() [<*x*>] => _HB_MEMBER <MethodName>(<params>) <x>
	#xtranslate @<!funcname!>([<params,...>])() => @<funcname>(<params>)
      + Add _InheritFrom_, _AsFunc_, _AsName_, _AsStr_, _AsStrLst_, __OPT__
      * Now Works with Delegate Message
	MESSAGE ... IS
	MESSAGE ... IS ... TO ...
	MESSAGE ... IS ... IN ...
	MESSAGE ... TO ...
	MESSAGE ... IN ...
	VAR ... IS ...
	VAR ... IS ... TO ...
	VAR ... IS ... IN ...
	VAR ... TO ...
	VAR ... IN ...

  * include/classes.h
    + Add to METHOD
   	PHB_SYMB pMsgIs;
	PHB_SYMB pMsgTo;

  * source/vm/classes.c
    * Change hb___msgDelegate
      + Now work full delegate at Run Time

  * source/rtl/tclass.prg
    - Remove Code